# ogenc

./: .gitignore  CMakeLists.txt  Makefile  ogenc  ogenc-cmake  ogenc-compilers  ogenc-compliers  ogenc-context  ogenc-context1  ogenc-context2  ogenc-generator  ogenc-splitter  ogenc-versions  test.cpp  test.opt.yaml
.cache/: -warnings.txt  available_compilers.txt  clang-11.0-warnings.txt  g++-10.2-warnings.txt  g++-7.5-warnings.txt  g++-versions.txt  generator.txt
.config/: compilers.txt  disabled.txt
cmake/: ogenc.cmake
cmake/ogenc/: ogenc-option.cmake
config/: compilers.txt  disabled.txt  ignored.txt
example/: CMakeLists.txt  demo1.cpp
lists/: optimize-clang++-11.0.txt  optimize-clang++-12.0.txt  optimize-clang++-14.0.txt  optimize-clang++-4.0.txt  optimize-clang++-7.0.txt  optimize-g++-10.2.txt  optimize-g++-12.1.txt  optimize-g++-4.8.txt  optimize-g++-5.3.txt  optimize-g++-6.2.txt  optimize-g++-7.4.txt  optimize-g++-7.5.txt  optimize-g++-8.2.txt  optimize-g++-9.3.txt  warnings-clang++-11.0.txt  warnings-clang++-12.0.txt  warnings-clang++-14.0.txt  warnings-clang++-3.4.txt  warnings-clang++-3.8.txt  warnings-clang++-7.0.txt  warnings-clang++-8.0.txt  warnings-g++-10.2.txt  warnings-g++-11.1.txt  warnings-g++-12.1.txt  warnings-g++-4.8.txt  warnings-g++-4.9.txt  warnings-g++-5.3.txt  warnings-g++-6.2.txt  warnings-g++-7.4.txt  warnings-g++-7.5.txt  warnings-g++-8.2.txt  warnings-g++-8.3.txt  warnings-g++-9.1.txt  warnings-g++-9.3.txt
lists/all/: optimize-clang++-11.0.txt  optimize-clang++-12.0.txt  optimize-clang++-14.0.txt  optimize-clang++-4.0.txt  (+33 more)
