cmake_minimum_required(VERSION 3.0)
project(demo)
include(../cmake/ogenc.cmake)
add_executable(demo1 demo1.cpp)
#message(STATUS ">>${ogenc_warning_options}")
#target_compile_options(demo1 PRIVATE -Werror -Wall -Wextra -Wpedantic -Wformat --pedantic-errors)
set_target_properties(demo1 PROPERTIES CXX_STANDARD 11 CXX_EXTENSIONS OFF)
#target_compile_options(demo1 PRIVATE ${ogenc_warning_options})
#ogenc_warning(-Weffc++ OFF)
target_ogenc_warnings(demo1)
#target_compile_options(demo1 PRIVATE -Wno-templates -Wno-namespaces)
